--- a/_posts/2015-09-22-naming.md
+++ b/_posts/2015-09-22-naming.md
@@ -5,4 +5,8 @@ title: Near-Space Balloon Name
 # {{ page.title }}
 
 Help choose the name for the probe GSEA will be sending up into space!  Submit
-your name ideas [here](https://docs.google.com/forms/d/1tgcRNTG4zPviDQzTFECi1eccURauthWDCu_SQKHIHao/viewform).
+your name ideas below. 
+
+<iframe style="height: 600px;" scrolling="no" seamless 
+src="https://docs.google.com/forms/d/1tgcRNTG4zPviDQzTFECi1eccURauthWDCu_SQKHIHao/viewform">
+</iframe>
