--- a/_posts/2015-09-22-naming.md
+++ b/_posts/2015-09-22-naming.md
@@ -3,7 +3,8 @@ title: Near-Space Balloon Name
 ---
 
 Help choose the name for the probe GSEA will be sending up into space!
-<!--END_EXCERPT--> Submit your name ideas below. 
+<!--END_EXCERPT--> GSEA is holding a public competition to select the name for
+its new probe.  Anyone is welcome to suggest a name.   Submit your ideas below. 
 
 <iframe style="height: 640px;" scrolling="no" seamless 
 src="https://docs.google.com/forms/d/1tgcRNTG4zPviDQzTFECi1eccURauthWDCu_SQKHIHao/viewform">
