--- a/_posts/2015-09-22-naming.md
+++ b/_posts/2015-09-22-naming.md
@@ -1,5 +1,6 @@
 ---
 title: Near-Space Balloon Name
+author: Cory McCartan
 ---
 
 Help choose the name for the probe GSEA will be sending up into space!
