--- a/_posts/2015-10-05-privacy.md
+++ b/_posts/2015-10-05-privacy.md
@@ -3,13 +3,12 @@ title: Privacy Policy Updated
 author: Cory McCartan
 ---
 
-GSEA has created a privacy policy to inform users of our use 
-of their personal information.  
+GSEA has created a privacy policy to inform users of the use of their personal
+information.  
 
-Currently, GSEA collects no personal information, but does 
-collect statistics about pagevists, browser, and operating 
-system in order to improve the website and better serve our 
-users.  
+Currently, GSEA collects no personal information, but does collect statistics
+about page vists, browsers, and operating systems in order to improve the
+website and better serve users.  
 
-Read entire the policy [here](/privacy).  You can also find a
-link at the bottom of every page.
+Read entire the policy [here](/privacy).  You can also find a link at the
+bottom of every page.
